@@ -139,6 +139,11 @@ int main(int argc, char**argv)
 #endif
 {
 #if defined WIN32
+	CreateMutexA(0, FALSE, "Local\\Domoticz"); 
+    if(GetLastError() == ERROR_ALREADY_EXISTS) { 
+		MessageBox(HWND_DESKTOP,"Another instance of Domoticz is already running!","Domoticz",MB_OK);
+        return -1; 
+	}
 	bool bStartWebBrowser=true;
 	RedirectIOToConsole();
 #endif
